--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@alpinejs/anchor": "^3.14.3",
         "@alpinejs/collapse": "^3.14.3",
         "alpinejs": "^3.14.3",
+        "axios": "^1.7.9",
         "datatables.net-buttons": "^3.2.0",
         "datatables.net-buttons-dt": "^3.2.0",
         "datatables.net-dt": "^2.1.8",
